# opn-intelligence

./: .gitignore  LICENCE  README.md  conftest.py  decrypt.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: app-deploy.yml
app/: main.py
app/api/v1/: health.py  router.py
app_services_parent/infinity/app/: main.py
app_services_parent/onboarding/app/: main.py
app_services_parent/operations/app/: main.py
app_services_parent/operations/requirements/: requirements.txt
app_services_parent/pre_onboarding/app/: main.py
app_services_parent/pre_onboarding/requirements/: requirements.txt
app_services_parent/settlement/app/: main.py
app_services_parent/settlement/requirements/: requirements-dev.txt
app_services_parent/shipment/: .gitignore  pyproject.toml
app_services_parent/shipment/app/: main.py
app_services_parent/shipment/app/api/v1/quote/controllers/: __init__.py  quote_controller.py
app_services_parent/shipment/app/api/v1/quote/models/entities/: quote.py
app_services_parent/shipment/app/api/v1/quote/models/request/: quote_request.py
app_services_parent/shipment/app/api/v1/quote/models/response/: quote_response.py
app_services_parent/shipment/app/api/v1/quote/services/: quote_service.py
app_services_parent/shipment/requirements/: requirements-dev.txt  requirements.txt
app_services_parent/shipment/test-results/: report.xml
app_services_parent/shipment/tests/: conftest.py
app_services_parent/shipment/tests/quote/: conftest.py
app_services_parent/shipment/tests/quote/test_controllers/: test_quote_controller.py
app_services_parent/shipment/tests/quote/test_models/: test_quote_models.py
app_services_parent/shipment/tests/quote/test_services/: test_quote_service.py
common/config/: base_config.py
common/templates/env/: .env.development  .env.production  .env.staging
docker/: Dockerfile  entrypoint.sh
docs/: branching-strategy.md  dev-process.md  opn-intelligence-architecture.md
docs/design/: design-template.md  sample-design-doc(auth-service-design).md
env/: .env.dev
infra/dev/: devops_secure.properties  values.opn-intelligence.yaml
requirements/: requirements-dev.txt  requirements.txt
